Bug #37537 myisamchk fails with Assertion failure with partitioned table
Submitted: 19 Jun 2008 23:16 Modified: 16 Sep 2008 14:35
Reporter: Sveta Smirnova Email Updates:
Status: Closed
Category:Server: MyISAM Severity:S2 (Serious)
Version:5.1 OS:Linux
Assigned to: Ramil Kalimullin Target Version:5.1.28+
Triage: D2 (Serious)

[19 Jun 2008 23:16] Sveta Smirnova
Description:
myisamchk fails with "myisamchk: mi_check.c:1215: chk_data_link: Assertion `0' failed." when trying to analyze partitioned table.

How to repeat:
Use data provided in hidden comment.

myisamchk --analyze --tmpdir=/tmp -vvv ./t1#P#*.MYI

myisamchk: mi_check.c:1215: chk_data_link: Assertion `0' failed.
Checking MyISAM file: ./t1#P#p0.MYI
Data records: 89706 Deleted blocks: 0
- check file-size
- check record delete-chain
No recordlinks
- check key delete-chain
block_size 1024:
- check index reference
- check data record references index: 1
- check data record references index: 2
- check data record references index: 3
- check data record references index: 4
- check data record references index: 5
- check data record references index: 6
- check data record references index: 7
- check data record references index: 8
- check record links
[19 Jun 2008 23:34] Sveta Smirnova
Table was compressed, index were repaired.
[14 Jul 2008 17:02] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/49698

2703 Ramil Kalimullin	2008-07-14
      Fix for bug#37537: myisamchk fails with Assertion failure with partitioned table
      
      Problem: missed "break" in a switch leads to unexpected assertion failure
      of 'myisamchk compressed_table'.
      
      Fix: add the break.
[15 Aug 2008 5:56] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51694

2700 Ramil Kalimullin	2008-08-15
      Fix for bug#37537: myisamchk fails with Assertion failure with partitioned table
      
      Problem: missed "break" in a switch leads to unexpected assertion failure
      of 'myisamchk compressed_table'.
      
      Fix: add the break.
[15 Aug 2008 6:13] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/51695

2700 Ramil Kalimullin	2008-08-15
      Fix for bug#37537: myisamchk fails with Assertion failure with partitioned table
      
      Problem: missed "break" in a switch leads to unexpected assertion failure
      of 'myisamchk compressed_table'.
      
      Fix: add the break.
[25 Aug 2008 10:44] Georgi Kodinov
Pushed in 5.1.28
[25 Aug 2008 19:50] Paul DuBois
Noted in 5.1.28 changelog.

myisamchk failed with an assertion error when analyzing a partitioned
MyISAM table.

Setting report to NDI pending push of fix into 6.0.x.
[13 Sep 2008 22:31] Bugs System
Pushed into 6.0.6-alpha  (revid:ramil@mysql.com-20080815055520-jm4s4m0mfzcdenrj) (version source revid:hakan@mysql.com-20080716105246-eg0utbybp122n2w9) (pib:3)
[16 Sep 2008 14:35] Paul DuBois
Noted in 6.0.6 changelog.