Fix for bug#37537: myisamchk fails with Assertion failure with partitioned table

Problem: missed "break" in a switch leads to unexpected assertion failure
of 'myisamchk compressed_table'.

Fix: add the break.